p2ws_package/Devpp2ws-Package/objects/Job_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>How long this Job Queue has been created</description>
        <formula>IF ( NOT(ISNULL(Queued_Time__c))
,TODAY() - DATEVALUE(Queued_Time__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>Which class originated this Job Queue</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Name of the Job Queue</description>
        <externalId>true</externalId>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Force this job to run immediately without waiting for the Schedule Time to be reached</description>
        <label>Manual Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parameter__c</fullName>
        <description>Parameter for the Apex Job or Batch to run</description>
        <label>Parameter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Queued_Time__c</fullName>
        <description>The timestamp when this Job Queue entered Scheduled Job in Salesforce</description>
        <label>Queued Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>The Id that is used to reference the record that originated this Job Queue</description>
        <label>Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>Result when the Job is scheduled into Scheuled Job in Salesforce</description>
        <label>Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Schedule_Time__c</fullName>
        <description>The time that this Job Queue should run</description>
        <label>Schedule Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Job Queue has been scheduled</description>
        <label>Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Queue</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Scheduled</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Schedule_Time__c</columns>
        <columns>Queued_Time__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Parameter__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Result__c</columns>
        <columns>Scheduled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Scheduled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Flight_1</fullName>
        <columns>Job_Name__c</columns>
        <columns>Schedule_Time__c</columns>
        <columns>Scheduled__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Job_Name__c</field>
            <operation>contains</operation>
            <value>660_16MAY</value>
        </filters>
        <label>Specific Flight</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Unscheduled</fullName>
        <columns>NAME</columns>
        <columns>Job_Name__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Schedule_Time__c</columns>
        <columns>Parameter__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Result__c</columns>
        <columns>Scheduled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Scheduled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unscheduled</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Job Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Queues</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>